--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.hibernate.ddl-auto=update
 project.poster=posters/
 
 base.url=http://localhost:8080
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sandeshbhujbal007@gmail.com
+spring.mail.password=ibviwkodtyztibec
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
